--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.4.0",
+    "antd": "^5.20.3",
     "bootstrap": "^5.3.3",
     "cloudinary-react": "^1.8.1",
     "jquery": "^3.7.1",
@@ -18,7 +20,8 @@
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-owl-carousel": "^2.3.3",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "reactjs-popup": "^2.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
