--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
     "antd": "^5.20.3",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "cloudinary-react": "^1.8.1",
+    "cors": "^2.8.5",
     "jquery": "^3.7.1",
     "owl.carousel": "^2.3.4",
     "react": "^18.3.1",
