--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cloudinary-react": "^1.8.1",
     "cors": "^2.8.5",
     "jquery": "^3.7.1",
+    "lodash": "^4.17.21",
     "owl.carousel": "^2.3.4",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
