--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
-    "antd": "^5.20.3",
-    "axios": "^1.7.7",
+    "antd": "^5.23.0",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "cloudinary-react": "^1.8.1",
     "cors": "^2.8.5",
     "jquery": "^3.7.1",
+    "lodash.debounce": "^4.0.8",
     "owl.carousel": "^2.3.4",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
