--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
+    "@emailjs/browser": "^4.4.1",
     "antd": "^5.23.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
